# YC-JNI

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yxh/deviceso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists2.txt  native-lib.cpp
app/src/main/cpp/Protocol/: BBC6638.c  BBC6638.h  BYKC_2003.c  BYKC_2003.h  BZC3395.c  BZC3395.h  CM2100D.c  CM2100D.h  CTP_120.c  CTP_120.h  CVT2301.c  CVT2301.h  DB_8001.c  DB_8001.h  DDC8910.c  DDC8910.h  DS_2000D.c  DS_2000D.h  FH_IDCE_2415CT.c  FH_IDCE_2415CT.h  FH_ai_6000h.c  FH_ai_6000h.h  FH_ai_6000hl.c  FH_ai_6000hl.h  FH_ai_6000r.c  FH_ai_6000r.h  FH_ai_6103z.c  FH_ai_6103z.h  FH_ai_6106s.c  FH_ai_6106s.h  FH_ai_6301.c  FH_ai_6301.h  FH_ai_6301B.c  FH_ai_6301B.h  FH_ai_6301_general.c  FH_ai_6301_general.h  FH_ai_6310B.c  FH_ai_6310B.h  FH_ai_6310L.c  FH_ai_6310L.h  (+58 more)
app/src/main/cpp/public/: Interface.c  cJSON.c  interface.c  interface.h  mycrc16.c  mycrc16.h  public.c  public.h
app/src/main/java/com/yxh/deviceso/: HxFromJNI.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yxh/deviceso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
